tests/paczka1/small_fuzzy/11032522.err
Error in line 2: kpJaFIuwngW A497 76,3
Error in line 1: 9Tcm0Zyr7P A274 83,7
Error in line 6: A497 A497 63,8
